--- a/views/sectionsIndex/about.pug
+++ b/views/sectionsIndex/about.pug
@@ -32,7 +32,7 @@ section(id='navAbout' class='about')
   div(class='about-information2')
     div(class='about-information2-content')
       div(class='about-information2-content-icon')
-        div(class='hexagon' id='hexagono2')
+        img(class='hexagon' id='hexagono2' src="https://docs.github.com/es/pull-requests" alt="foto")
       div(class='about-information2-content-title') Quien es este tipo?
       div(class='about-information2-content-text') Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum id eos temporibus voluptatem quos quaerat cupiditate recusandae dolorum corrupti maxime quas quae, debitis iure nihil sint. Nihil aliquid ipsa asperiores.
     
