--- a/views/sectionsIndex/portfolio.pug
+++ b/views/sectionsIndex/portfolio.pug
@@ -10,10 +10,11 @@ section(id='navPorfolio' class='portfolio')
   div(id='projects' class='portfolio-projects')
     template(id='TemplateProjects')
       div(class='portfolio-projects-item')
-        img(class='portfolio-projects-item-img', alt="")
-        div(class='portfolio-projects-item-text')
-          p(class='portfolio-projects-item-text-title') Vanilla Game
-          p(class='portfolio-projects-item-text-caption') JavaScript | Sass
-        div(class='portfolio-projects-item-button') LEARN MORE
+        div(class="portfolio-projects-item-fondo")
+          img(class='portfolio-projects-item-img', alt="")
+          div(class='portfolio-projects-item-text')
+            p(class='portfolio-projects-item-text-title') Vanilla Game
+            p(class='portfolio-projects-item-text-caption') JavaScript | Sass
+          div(class='portfolio-projects-item-button') LEARN MORE
 
 include blog
