--- a/public/stylesheets/_header.scss
+++ b/public/stylesheets/_header.scss
@@ -3,8 +3,8 @@
   display: flex;
   height: 50px;
   width: 100%;
-  border-bottom: solid $paleta_color_1 3px;
-  background: $paleta_color_3;
+  //border-bottom: solid $paleta_color_1 3px;
+  background: $paleta_menu;
   text-align: center;
 }
 .nav {
@@ -15,8 +15,7 @@
   &-link {
     margin-left: 20px;
     margin-right: 20px;
-    font-size: 20px;
-    text-transform: uppercase;
+    font-size: 1.5rem;
     &:hover {
       color: $paleta_color_2;
     }
