--- a/public/stylesheets/_portfolio.scss
+++ b/public/stylesheets/_portfolio.scss
@@ -1,14 +1,14 @@
-@import './variables';
+@import "./variables";
 .portfolio {
-  background-color: rgb(245,245,245);
+  background-color: $paleta_fondo_2;
   display: flex;
   flex-direction: column;
   text-align: center;
   padding-left: 15%;
-  padding-right:15%;
+  padding-right: 15%;
   padding-bottom: 200px;
   padding-top: 60px;
- 
+  color: $color-fg-default;
 
   &-filter {
     display: grid;
@@ -19,7 +19,7 @@
       font-size: 15pt;
       margin: 0 20px;
       cursor: pointer;
-      &:active{
+      &:active {
         background: $paleta_color_2;
         color: $fontColorWhite;
       }
@@ -28,20 +28,38 @@
 
   &-projects {
     display: grid;
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(3, auto);
+    column-gap: 20px;
+    row-gap: 15px;
 
     &-item {
-      border: 1px solid red;
+      border: 1px solid rgba(134, 134, 134, 0.781);
+      border-radius: 5px;
       height: 300px;
       width: 100%;
       position: relative;
-      transition: all .2s;
+      background-color: $paleta_fondo_1;
+      box-shadow: $color-shadow-medium;
+      transition: all 0.2s;
       background-size: contain;
       background-repeat: no-repeat;
-      
 
-          
-      &-text{
+      &-fondo {
+        transition: all 0.5s;
+      }
+
+      &:hover {
+        box-shadow: $color-shadow-large;
+      }
+
+      &:hover .portfolio-projects-item-fondo {
+        background-color: $paleta_fondo_1;
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+      }
+
+      &-text {
         visibility: hidden;
         position: absolute;
         top: 0;
@@ -49,43 +67,39 @@
         left: 0;
         margin-left: auto;
         margin-right: auto;
-        transition: all .4s;
-        &-title{
+        transition: all 0.4s;
+        &-title {
           font-size: 2rem;
         }
-        &-caption{
+        &-caption {
           color: $paleta_color_2;
         }
       }
-      &-button{
+      &-button {
         visibility: hidden;
-        position:absolute;
+        position: absolute;
         bottom: 0;
         right: 0;
         left: 0;
         width: 200px;
         font-size: 1.4rem;
-        border: solid 2px $paleta_color_2;
+        border: solid 2px $paleta_button;
         margin-left: auto;
         margin-right: auto;
-        transition: all .4s;
-        &:hover{
-          background: $paleta_color_2;
+        transition: all 0.4s;
+        &:hover {
+          background: $paleta_button;
           color: $fontColorWhite;
           cursor: pointer;
         }
       }
-      &:hover .portfolio-projects-item-text{
+      &:hover .portfolio-projects-item-text {
         top: 20%;
         visibility: visible;
       }
-      &:hover .portfolio-projects-item-button{
+      &:hover .portfolio-projects-item-button {
         bottom: 30%;
         visibility: visible;
-      }
-      &:hover{
-        //background-image:;
-        background-color: aqua !important; 
       }
     }
   }
